Import of JPRIT/LinkTree-1.05 from CPAN.
gitpan-cpan-distribution: LinkTree
gitpan-cpan-version:      1.05
gitpan-cpan-path:         JPRIT/LinkTree-1.05.tar.gz
gitpan-cpan-author:       JPRIT
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -4,20 +4,36 @@ Attempt at the definitive linktree implementation.
 
                                  -*-
 
-File::LinkTree - Creates symlink trees.  Also can prune bad links and
-unused directories.
+Creates symlink trees, also known as shadow directories.  Contains
+extra logic to manage merging of directory trees.  We are using this
+package to create complete perl installs with different version mixes
+for integration testing.
 
-Command line programs linktree and prunetree provide interfaces to the
-library.
+- Prunes bad links and unused directories.
+
+- Creates a listing of merged directories that can be use to rebuild
+the merge.
+
+usage: linktree [-n] [-v] [-m 0777] [-u] (<src>|-f LINKTREES) <dest>
+         -f <trees>    link all the directories listed in <trees>
+         -m <mode>     create directories with <mode>
+         -u            unlink
+         If $LINKTREE_BASE is set, <dest> may be omitted.
+ 
+       linktree -p [-n] [-v] [-f LINKTREES] <dir>
+         -f <trees>    write a list of all directories linked into <dir>
+         -p            prune bad links under <dir> (or $LINKTREE_BASE)
+ 
+         -n            no operation mode
+         -s            silent (don't warn about minor problems)
+         -v            verbose
 
                                  -*-
 
-Hopefully, this package will eventually be rolled into a File::*
-bundle.
+Get it from http://www.perl.com/CPAN/authors/id/JPRIT/!
 
-                                 -*-
-
-Requires File::Recurse (part of File::Tools module).
+Requires File::Recurse (part of File::Tools module) & a patch to
+fix a bug in File::Recurse.
 
                                  -*-
 
